--- a/cifra/style.css
+++ b/cifra/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -9,6 +13,7 @@ html, body {
 textarea#content {
   position: fixed;
   padding: 10px;
+  height: 70%;
   top: 0; bottom: 0;
   left: 0; right: 0;
   font-size: 3em;
@@ -16,8 +21,9 @@ textarea#content {
 
 table#keyboard {
   position: fixed;
-  left: 0;
-  right: 0;
+  width: 100%;
+  height: 30%;
+  left: 0; right: 0;
   bottom: 0;
 }
 td {
